Add animation when scrolling

--- a/client/components/about/about.html
+++ b/client/components/about/about.html
@@ -1,5 +1,5 @@
 <template name="about">
-  <section id="about-page">
+  <section id="about-page" class="sr-containers">
     <div class="container my-auto">
       <div class="row">
         <div class="col-10 mx-auto text-center">
@@ -15,13 +15,13 @@
           <p class="lead">I am fluent in English, Punjabi, Hindi and Urdu.</p>
         </div>
         <div class="col-md-4 mx-auto d-none d-md-block">
-          <img src="/headshots/Headshot.jpg" class="img img-fluid img-thumbnail px-2 py-2" width="400" alt="Manpreet Kaur's Picture" />
+          <img src="/headshots/Headshot.jpg" class="img img-fluid img-thumbnail px-2 py-2 sr-images" width="400" alt="Manpreet Kaur's Picture" />
           <h4 class="text-center">Manpreet Kaur<br/><small><em>L.L.B</em>, <em>L.L.M</em></small></h4>
         </div>
         <!--End for Large screen Devices-->
         <!--For smaller devices-->
         <div class="col-sm-8 mx-auto d-md-none">
-          <img src="/headshots/Headshot.jpg" class="mx-auto img img-thumbnail px-2 py-2" width="400" alt="Manpreet Kaur's Picture" />
+          <img src="/headshots/Headshot.jpg" class="mx-auto img img-thumbnail px-2 py-2 sr-images" width="400" alt="Manpreet Kaur's Picture" />
           <h4 class="text-center">Manpreet Kaur<br/><small><em>L.L.B</em>, <em>L.L.M</em></small></h4>
         </div>
         <div class="col-sm-12 d-md-none">
