--- a/client/components/practices/practices.html
+++ b/client/components/practices/practices.html
@@ -10,42 +10,42 @@
     </div>
   </section>
 
-  <section id="practices-injury-law">
+  <section id="practices-injury-law" class="sr-containers">
     <div class="container my-auto">
       <div class="row">
         <div class="col-sm-12 col-md-6 mx-auto my-4 text-center">
           <h2 class="section-heading my-5">Personal Injury Law</h2>
           <ul class="list-unstyled mt-5 d-none d-md-block">
-            <li>Motor Vehicle Accidents</li>
-            <li>Slip and Fall Accidents</li>
-            <li>Medical Malpractice</li>
-            <li>Premises Liability</li>
-            <li>Animal Bites</li>
-            <li>Public Transport Accident</li>
-            <li>Motorcycle Accident</li>
-            <li>Truck Accident</li>
-            <li>Bicycle Accident</li>
-            <li>Wrongful Death</li>
+            <li class="item">Motor Vehicle Accidents</li>
+            <li class="item">Slip and Fall Accidents</li>
+            <li class="item">Medical Malpractice</li>
+            <li class="item">Premises Liability</li>
+            <li class="item">Animal Bites</li>
+            <li class="item">Public Transport Accident</li>
+            <li class="item">Motorcycle Accident</li>
+            <li class="item">Truck Accident</li>
+            <li class="item">Bicycle Accident</li>
+            <li class="item">Wrongful Death</li>
           </ul>
         </div>
         <div class="col-sm-12 col-md-6 mx-auto">
-          <p class="text-logo-blue lead">If you have been hurt as a result of someone else’s negligence, one of the most crucial decisions you will make is choosing the right legal representative. These cases take years to fight. You are entrusting the security of your future with the lawyer you hire. You have to feel at ease with your lawyer and not intimidated. There is only one chance to obtain compensation for the injuries or losses you have suffered. Only a skilled and experienced lawyer can effectively advocate for full compensation for your pain and suffering, income losses and medical bills that you will face in the years ahead.</p>
-          <p class="text-logo-blue lead">MKG Law is committed to giving each client tailored personal injury representation. We will quickly gain your trust by providing dedicated, knowledgeable and diligent personal legal service. This includes regular meetings at convenient times and locations, prompt responses to your phone calls and emails, keeping you fully informed of the progress of your case and thoroughly preparing you for discovery.</p>
-          <p class="text-logo-blue lead">You are our focus. We will attentively listen to your story, give you straightforward advice on your rights in simple terms and pursue all necessary means and strategic solutions to obtain maximum compensation to which you are entitled.</p>
+          <p class="lead">If you have been hurt as a result of someone else’s negligence, one of the most crucial decisions you will make is choosing the right legal representative. These cases take years to fight. You are entrusting the security of your future with the lawyer you hire. You have to feel at ease with your lawyer and not intimidated. There is only one chance to obtain compensation for the injuries or losses you have suffered. Only a skilled and experienced lawyer can effectively advocate for full compensation for your pain and suffering, income losses and medical bills that you will face in the years ahead.</p>
+          <p class="lead">MKG Law is committed to giving each client tailored personal injury representation. We will quickly gain your trust by providing dedicated, knowledgeable and diligent personal legal service. This includes regular meetings at convenient times and locations, prompt responses to your phone calls and emails, keeping you fully informed of the progress of your case and thoroughly preparing you for discovery.</p>
+          <p class="lead">You are our focus. We will attentively listen to your story, give you straightforward advice on your rights in simple terms and pursue all necessary means and strategic solutions to obtain maximum compensation to which you are entitled.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="real-estate-law">
+  <section id="real-estate-law" class="sr-containers">
     <div class="container my-auto">
       <div class="row">
         <div class="col-sm-12 col-md-6 mx-auto my-4 text-center">
           <h2 class="section-heading my-5">Real Estate Law</h2>
           <ul class="list-unstyled d-none d-md-block">
-            <li>Residential</li>
-            <li>Commercial</li>
-            <li>Refinancing</li>
+            <li class="item">Residential</li>
+            <li class="item">Commercial</li>
+            <li class="item">Refinancing</li>
           </ul>
         </div>
         <div class="col-sm-12 col-md-6">
@@ -53,11 +53,11 @@
           <p class="text-logo-blue lead">MKG Law can help with numerous matters that arise when you purchase, sell or mortgage real estate. Whether it is a residential, investment, recreational or commercial property, MKG Law is dedicated to providing our clients with excellent legal service.</p>
           <p class="text-logo-blue lead">Our Real Estate practice includes:</p>
           <ul class="text-logo-blue lead">
-            <li>Buying and selling property</li>
-            <li>Mortgages</li>
-            <li>Refinancing</li>
-            <li>Power of sale and foreclosure</li>
-            <li>Commercial leasing</li>
+            <li class="item">Buying and selling property</li>
+            <li class="item">Mortgages</li>
+            <li class="item">Refinancing</li>
+            <li class="item">Power of sale and foreclosure</li>
+            <li class="item">Commercial leasing</li>
           </ul>
           <p class="text-logo-blue lead">MKG Law will work to get to the essence of your Real Estate transaction and focus on important issues. I will make sure the legal requirements are in order to achieve your objectives.</p>
           <p class="text-logo-blue lead"><a href="/contact" class="text-logo-red">Contact our office</a> to set up a free consultation. Let's get started!</p>
@@ -66,7 +66,29 @@
     </div>
   </section>
 
-  <section id="wills-law">
+  <section id="traffic-tickets-law" class="sr-containers">
+    <div class="container my-auto">
+      <div class="row">
+        <div class="col-sm-12 col-md-6 mx-auto my-4 text-center">
+          <h2 class="section-heading my-5">Traffic Tickets</h2>
+          <ul class="list-unstyled d-none d-md-block">
+            <li class="item">Speeding Tickets</li>
+            <li class="item">Careless driving Tickets</li>
+            <li class="item">Racing or Stunt Driving</li>
+            <li class="item">Red light Tickets</li>
+            <li class="item">Stop Sign traffic tickets</li>
+            <li class="item">Driving while under supsension</li>
+            <li class="item">Insurance Violations</li>
+          </ul>
+        </div>
+        <div class="col-sm-12 col-md-6 mt-5 pt-2">
+          <p class="lead">MKG Law is your solution for fighting traffic tickets in the GTA. We understand that every traffic ticket case is unique and individual. Because of this we offer personalized solutions for every traffic ticket cases.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="wills-law" class="sr-containers">
     <div class="container my-auto">
       <div class="row">
         <div class="col-sm-12 col-md-6 mx-auto my-4 text-center">
@@ -79,25 +101,4 @@
     </div>
   </section>
 
-  <section id="traffic-tickets-law">
-    <div class="container my-auto">
-      <div class="row">
-        <div class="col-sm-12 col-md-6 mx-auto my-4 text-center">
-          <h2 class="section-heading my-5">Traffic Tickets</h2>
-          <ul class="list-unstyled d-none d-md-block">
-            <li>Speeding Tickets</li>
-            <li>Careless driving Tickets</li>
-            <li>Racing or Stunt Driving</li>
-            <li>Red light Tickets</li>
-            <li>Stop Sign traffic tickets</li>
-            <li>Driving while under supsension</li>
-            <li>Insurance Violations</li>
-          </ul>
-        </div>
-        <div class="col-sm-12 col-md-6 mt-5 pt-2">
-          <p class="lead">MKG Law is your solution for fighting traffic tickets in the GTA. We understand that every traffic ticket case is unique and individual. Because of this we offer personalized solutions for every traffic ticket cases.</p>
-        </div>
-      </div>
-    </div>
-  </section>
 </template>
