--- a/client/components/contact/contact.html
+++ b/client/components/contact/contact.html
@@ -7,16 +7,16 @@
           <hr/>
         </div>
         <div class="col-lg-8 mx-auto text-center">
-          <address class="text-center lead mt-4 mb-2">
+          <address class="text-center item lead mt-4 mb-2">
             <i class="fas fa-map-marker-alt sr-icons"></i> 186 Robert Speck Pkwy Mississauga, ON. L4Z 3G1, <span style="font-size:2rem;">&#x1F1E8;&#x1F1E6;</span>
           </address>
-          <p class="lead my-2">
+          <p class="lead my-2 item">
             <i class="fas fa-envelope sr-icons"></i> <a href="mailto:manpreet@mkglaw.ca">manpreet@mkglaw.ca</a>
           </p>
-          <p class="lead my-2">
+          <p class="lead my-2 item">
             <i class="fas fa-phone sr-icons"></i> <a href="tel:647-797-9454">(647) 797-9454</a>
           </p>
-          <p class="lead my-2">
+          <p class="lead my-2 item">
             <i class="fas fa-fax sr-icons"></i> (647) 494-3833
           </p>
         </div>
