Add linkedin logo footer and about page

--- a/client/components/about/about.html
+++ b/client/components/about/about.html
@@ -17,12 +17,18 @@
         <div class="col-md-4 mx-auto d-none d-md-block">
           <img src="/headshots/Headshot.jpg" class="img img-fluid img-thumbnail px-2 py-2 sr-images" width="400" alt="Manpreet Kaur's Picture" />
           <h4 class="text-center">Manpreet Kaur<br/><small><em>L.L.B</em>, <em>L.L.M</em></small></h4>
+          <ul class="list-inline text-center mt-3">
+            <li><a href="https://ca.linkedin.com/in/manpreet-kaur-3405786b"><i class="fab fa-linkedin"></i></a></li>
+          </ul>
         </div>
         <!--End for Large screen Devices-->
         <!--For smaller devices-->
         <div class="col-sm-8 mx-auto d-md-none">
           <img src="/headshots/Headshot.jpg" class="mx-auto img img-thumbnail px-2 py-2 sr-images" width="400" alt="Manpreet Kaur's Picture" />
           <h4 class="text-center">Manpreet Kaur<br/><small><em>L.L.B</em>, <em>L.L.M</em></small></h4>
+          <ul class="list-inline">
+            <li><a href="https://ca.linkedin.com/in/manpreet-kaur-3405786b"><i class="fab fa-linkedin"></i></a></li>
+          </ul>
         </div>
         <div class="col-sm-12 d-md-none">
           <p class="lead">I recognize the stress and expense associated in finding a smart, friendly lawyer to help you with all your legal needs, whether it is selling or buying a property or representing your needs in litigation. My aim is to provide you with quality, cost effective, practical, progressive and timely legal service.</p>
