--- a/client/components/footer.html
+++ b/client/components/footer.html
@@ -1,7 +1,13 @@
 <template name="footer">
   <footer class="container-fluid py-1 bg-light text-dark">
     <div class="row">
+      <div class="col-sm-12 mt-4">
+        <ul class="list-inline text-center">
+          <li data-toggle="tooltip" data-placement="top" title="LinkedIn"><a href="https://ca.linkedin.com/in/manpreet-kaur-3405786b"><i class="fab fa-2x fa-linkedin"></i></a></li>
+        </ul>
+      </div>
       <div class="col-sm-12">
+        <hr/>
         <p class="text-center">&copy; 2018 MKG Law Professional Corp.
           <a href="/"><img width="110" src="/images/mkg_logo.svg" alt="MKG Logo"></a>
         </p>
