--- a/client/components/practices/practices.html
+++ b/client/components/practices/practices.html
@@ -10,6 +10,23 @@
     </div>
   </section>
 
+  <section id="nav-areas-practice" class="sr-containers">
+    <ul class="nav nav-pills nav-fill">
+      <li class="nav-item">
+        <a class="nav-link" href="#real-estate-law">Real Estate Law</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#practices-injury-law">Personal Injury Law</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#traffic-tickets-law">Traffic Tickets</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#wills-law">Wills and Estates</a>
+      </li>
+    </ul>
+  </section>
+
   <section id="real-estate-law" class="sr-containers">
     <div class="container my-auto">
       <div class="row">
