Updates designs for practices

--- a/client/components/practices/practices.html
+++ b/client/components/practices/practices.html
@@ -15,52 +15,140 @@
   <section id="nav-areas-practice" class="sr-containers">
     <ul class="nav nav-pills nav-fill">
       <li class="nav-item">
-        <a class="nav-link" href="#real-estate-law">Real Estate Law</a>
+        <a class="nav-link" href="#commercial-corporate-law"
+          >Commercial Corporate Law</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#commercial-real-estate-law"
+          >Commercial Real Estate</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#residential-real-estate-law"
+          >Residential Real Estate</a
+        >
       </li>
     </ul>
   </section>
-
-  <section id="real-estate-law" class="sr-containers">
+  <section id="commercial-corporate-law" class="practices sr-containers">
     <div class="container my-auto">
       <div class="row">
-        <div class="col-sm-12 col-md-6 mx-auto my-4 text-center">
-          <h2 class="section-heading my-5">Real Estate Law</h2>
-          <ul class="list-unstyled d-none d-md-block">
-            <li class="item">Residential</li>
-            <li class="item">Commercial</li>
-            <li class="item">Refinancing</li>
-          </ul>
+        <div class="col-sm-12 col-md-6 mx-auto text-center">
+          <h2 class="section-heading">Commercial &amp; Corporate Law</h2>
+          <img
+            class="d-sm-block img-fluid mx-auto sr-images my-4"
+            src="/images/undraw_coffee_re_x35h.svg"
+            width="600"
+          />
         </div>
         <div class="col-sm-12 col-md-6">
           <p class="text-logo-blue lead">
-            Buying or selling a home is an exciting and stressful time. MKG Law
-            can assist you in every aspect of your purchase. Whether you are
-            buying and/or selling a Residential Property, a Commercial property,
-            or simply refinancing your property, MKG Law is there to help.
+            We help start-ups, small businesses and professionals achieve their
+            goals with sound legal advice and services.
           </p>
           <p class="text-logo-blue lead">
-            MKG Law can help with numerous matters that arise when you purchase,
-            sell or mortgage real estate. Whether it is a residential,
-            investment, recreational or commercial property, MKG Law is
-            dedicated to providing our clients with excellent legal service.
+            Our Commercial &amp; Corporate practice includes:
           </p>
-          <p class="text-logo-blue lead">Our Real Estate practice includes:</p>
           <ul class="text-logo-blue lead">
-            <li class="item">Buying and selling property</li>
-            <li class="item">Mortgages</li>
-            <li class="item">Refinancing</li>
-            <li class="item">Power of sale and foreclosure</li>
-            <li class="item">Commercial leasing</li>
+            <li class="item">
+              Incorporations, including incorporations for professionals
+            </li>
+            <li class="item">Shareholder agreements</li>
+            <li class="item">Shareholder disputes</li>
+            <li class="item">Reorganizations &amp; amalgamations</li>
+            <li class="item">Buying and selling shares and assets</li>
+            <li class="item">Business name registrations</li>
+            <li class="item">
+              Confidentiality agreements and non-disclosure agreements
+            </li>
+            <li class="item">Employment contracts</li>
+            <li class="item">Partnership agreements</li>
+            <li class="item">Family trusts</li>
+          </ul>
+          <p class="lead">
+            <a href="/contact"><strong>Contact our office</strong></a>
+            to set up a free consultation. Let's get started!
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="commercial-real-estate-law" class="practices sr-containers">
+    <div class="container my-auto">
+      <div class="row">
+        <div class="col-sm-12 col-md-6">
+          <p class="text-logo-blue lead">
+            We work on large commercial and industrial transactions to ensure
+            the process is smooth from start to finish.
+          </p>
+          <p class="text-logo-blue lead">
+            Our Commercial Real Estate practice includes:
+          </p>
+          <ul class="text-logo-blue lead">
+            <li class="item">Purchase and sale of commercial properties</li>
+            <li class="item">Financing</li>
+            <li class="item">Land development</li>
+            <li class="item">Joint ventures</li>
+            <li class="item">Commercial landlord and tenant issues</li>
+            <li class="item">Commercial litigation</li>
+          </ul>
+          <p class="text-logo-blue lead">
+            <a href="/contact" class="text-logo-blue"
+              ><strong>Contact our office</strong></a
+            >
+            to set up a free consultation. Let's get started!
+          </p>
+        </div>
+        <div class="col-sm-12 col-md-6 mx-auto text-center">
+          <h2 class="section-heading">Commercial Real Estate</h2>
+          <img
+            class="d-sm-block img-fluid mx-auto sr-images my-4"
+            src="/images/undraw_building_re_xfcm.svg"
+            width="600"
+          />
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="residential-real-estate-law" class="practices sr-containers">
+    <div class="container my-auto">
+      <div class="row">
+        <div class="col-sm-12 col-md-6 mx-auto text-center">
+          <h2 class="section-heading">Residential Real Estate</h2>
+          <img
+            class="d-sm-block img-fluid mx-auto sr-images my-4"
+            src="/images/undraw_for_sale_re_egkk.svg"
+            width="600"
+          />
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <p class="text-logo-blue lead">
+            We help close deals effectively for buyers, sellers, lenders and
+            real estate agents. Our services are catered to assist clients
+            throughout the buying and selling process in an affordable way.
+          </p>
+          <p class="text-logo-blue lead">
+            Our Residential Real Estate practice includes:
+          </p>
+          <ul class="text-logo-blue lead">
+            <li class="item">Real estate law & closings</li>
+            <li class="item">Purchase and sale of residential properties</li>
+            <li class="item">Transfer of title</li>
+            <li class="item">Mortgage financing & refinancing</li>
+            <li class="item">Land development</li>
+            <li class="item">Residential leases</li>
+            <li class="item">Landlord and tenant issues</li>
+            <li class="item">Real estate and mortgage litigation</li>
           </ul>
           <p class="text-logo-blue lead">
             MKG Law will work to get to the essence of your Real Estate
             transaction and focus on important issues. I will make sure the
             legal requirements are in order to achieve your objectives.
           </p>
-          <p class="text-logo-blue lead">
-            <a href="/contact" class="text-logo-blue"
-              ><strong style="color: #ffffff">Contact our office</strong></a
-            >
+          <p class="lead">
+            <a href="/contact"><strong>Contact our office</strong></a>
             to set up a free consultation. Let's get started!
           </p>
         </div>
